# evm-bytecode-hs

./: LICENSE  README.md  hs-evm-ast.cabal  package.yaml  stack.yaml
src/: Main.hs
src/EVM/: Instructions.hs  InstructionsTH.hs
